Bug 468402 - [Hover] Quickfix buttons change height when hovered over causing a scrollbar to show

--- a/bundles/org.eclipse.orion.client.editor/web/orion/editor/tooltip.css
+++ b/bundles/org.eclipse.orion.client.editor/web/orion/editor/tooltip.css
@@ -2,7 +2,7 @@
 .textviewTooltip {
 	font-family: "Consolas", "Monaco", "Vera Mono", monospace;
 	font-size: 12px;
-	background-color: #325C80;
+	background-color: #325C80; /* Must match the quickfix command button border color */
 	color: #FAFAFA;
 	padding: 8px;
 	border-radius: 3px;
@@ -71,7 +71,7 @@
 	vertical-align: middle;
 }
 .textviewTooltip .commandButton { /* Styling quickfixes */
-	border: 0;
+	border: 1px solid #325C80;
 	background-color: inherit;
 	color: white;
 }
